--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>1.0.0-M3</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.junit/junit5-engine -->
         <dependency>
             <groupId>org.junit</groupId>
