--- a/pom.xml
+++ b/pom.xml
@@ -8,100 +8,103 @@
     <artifactId>junit5-test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <junit.jupiter.version>5.1.1</junit.jupiter.version>
+        <junit.platform.version>1.1.1</junit.platform.version>
+    </properties>
+
     <dependencies>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>RELEASE</version>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-surefire-provider</artifactId>
-            <version>1.0.0-M3</version>
-        </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.junit/junit5-engine -->
-        <dependency>
-            <groupId>org.junit</groupId>
-            <artifactId>junit5-engine</artifactId>
-            <version>5.0.0-ALPHA</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>6.14.3</version>
-            <scope>test</scope>
-        </dependency>
 
     </dependencies>
 
     <profiles>
         <profile>
+            <id>slow-tests</id>
+            <build>
+                <plugins>
+
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.1</version>
+                        <configuration>
+                            <source>${java.version}</source>
+                            <target>${java.version}</target>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.19</version>
+                        <configuration>
+                            <properties>
+                                <includeTags>slow,service</includeTags>
+                            </properties>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.junit.platform</groupId>
+                                <artifactId>junit-platform-surefire-provider</artifactId>
+                                <version>${junit.platform.version}</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+
+        </profile>
+
+        <profile>
             <id>fast-tests</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
-            <properties>
-                <groups>fast</groups>
-            </properties>
             <build>
                 <plugins>
+
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.1</version>
                         <configuration>
-                            <groups>fast</groups>
-                            <includes>
-                                <include>**/*Fast*</include>
-                            </includes>
+                            <source>${java.version}</source>
+                            <target>${java.version}</target>
                         </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.testng</groupId>
-                                <artifactId>testng</artifactId>
-                                <version>6.14.3</version>
-                            </dependency>
-                        </dependencies>
                     </plugin>
-
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>slow-tests</id>
-            <properties>
-                <groups>slow</groups>
-            </properties>
-            <build>
-                <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
+                        <version>2.19</version>
                         <configuration>
-                            <groups>slow</groups>
-                            <includes>
-                                <include>**/*Slow*</include>
-                            </includes>
+                            <properties>
+                                <includeTags>fast</includeTags>
+                            </properties>
                         </configuration>
                         <dependencies>
                             <dependency>
-                                <groupId>org.testng</groupId>
-                                <artifactId>testng</artifactId>
-                                <version>6.14.3</version>
+                                <groupId>org.junit.platform</groupId>
+                                <artifactId>junit-platform-surefire-provider</artifactId>
+                                <version>${junit.platform.version}</version>
                             </dependency>
                         </dependencies>
                     </plugin>
                 </plugins>
             </build>
+
         </profile>
 
     </profiles>
-
 
 </project>
