--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,21 @@
             <scope>provided</scope>
         </dependency>
 
-
+        <!--
+             adding vintage for supporting junit 4
+        -->
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13-beta-2</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
